# data_strukt

./: .gitignore  main.py  pyproject.toml
test/: test_linked_list.py  test_node.py  test_stack.py
utils/: linked_list.py  node.py  stack.py
