[tool.poetry]
name = "pythonproject6"
version = "0.1.0"
description = ""
authors = ["twist <twistysmig@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
self = "^2020.12.3"
coverage = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
